<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/LinearStyle"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                style="@style/TextViewStyle"
                android:textColor="?attr/colorPrimaryVariant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/pad16"
                android:paddingStart="@dimen/pad16"
                android:text="@string/Title"
                tools:ignore="RtlSymmetry"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/space28"
            android:layout_marginHorizontal="@dimen/pad16">

        <Button
                style="@style/ButtonStyle"
                android:id="@+id/buttonSearch"
                app:icon="@drawable/search"
                android:text="@string/button1"
                android:layout_marginTop="28dp"
                tools:ignore="MissingConstraints"/>

        <Button
                style="@style/ButtonStyle"
                android:id="@+id/buttonMedia"
                app:icon="@drawable/library"
                android:text="@string/button2"
                tools:ignore="MissingConstraints"/>

        <Button
                style="@style/ButtonStyle"
                android:id="@+id/settings"
                app:icon="@drawable/settings"
                android:text="@string/button3"
                tools:ignore="MissingConstraints"
                />
    </LinearLayout>
</LinearLayout>
