<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="?attr/colorSecondaryVariant"
        tools:context=".SearchActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        <ImageView
                style="@style/ImageViewStyle"
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_button24"
                android:layout_height="@dimen/back_button24"
                android:layout_marginStart="@dimen/pad16"
                android:layout_gravity="center_vertical"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/arrow_back_black_24dp"
                tools:ignore="RtlSymmetry"/>

        <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="24dp"
                android:text="@string/search"
                android:textSize="22sp"
                android:textColor="?attr/colorOnPrimary"
                tools:ignore="RtlSymmetry"/>

    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad16"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_height="48dp"
                app:icon="@drawable/search"
                app:iconGravity="start"
                android:layout_marginHorizontal="@dimen/pad16"
                android:inputType="text"
                app:drawableStartCompat="@drawable/search"
                android:drawableTint="@color/gray"
                android:hint="@string/search"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingStart="@dimen/pad16"
                android:textAlignment="textStart"
                android:maxLength="32"
                android:drawablePadding="8dp"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="@color/hintColor"
                android:background="@drawable/rectangle_edittext"/>

        <ImageView
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:paddingEnd="30dp"
                android:src="@drawable/clear_button"
                android:visibility="gone"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistRV"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/not_found_placeholder"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/not_found"
            android:src="@drawable/not_found"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/not_found_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text19"
            android:textAlignment="center"
            android:visibility="gone"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/server_error_placeholder"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/server_offline"
            android:src="@drawable/server_error"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/server_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_offline"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text19"
            android:textAlignment="center"
            android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/refresh_button"
            android:layout_marginVertical="@dimen/pad16"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:cornerRadius="25dp"
            android:letterSpacing="0"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:lineHeight="@dimen/text16"
            android:textSize="@dimen/text14"
            android:textColor="?attr/colorSecondaryVariant"
            android:backgroundTint="?attr/colorOnPrimary"
            android:textAllCaps="false"
            android:text="@string/refresh"
            android:textAlignment="center"/>

</LinearLayout>
